# ReCoDE-SPH-solver-2D-NS

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  Dockerfile.dev  LICENSE.md  README.md  clang-format.sh  index.html  mkdocs.yml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: format.yml
1.SPH/: index.html
2.Neighbour_Search/: index.html
3.Adaptive_Timestep/: index.html
4.Code_Overview/: index.html
5.IO_overview/: index.html
6.OOP_Concepts/: index.html
7.STL/: index.html
8.Efficient_Programming/: index.html
A1.Code_Execution/: index.html
A2.GH_Codespaces/: index.html
A3.Profiling/: index.html
A4.Post_Analysis/: index.html
B1.Clang_Format/: index.html
B2.CMake/: index.html
C1.Exercises/: index.html
docs/: 1.SPH.md  2.Code_Overview.md  2.Code_overview.md  2.Neighbour_Search.md  3.Adaptive_Timestep.md  3.Code_execution.md  3.IO_overview.md  4.Code_Overview.md  4.IO_overview.md  4.OOP_Concepts.md  5.OOP_concepts.md  5.STL.md  6.Efficient_Programming.md  6.OOP_Concepts.md  7.Neighbour_Search.md  8.Adaptive_Timestep.md  A1.Code_Execution.md  A2.GH_Codespaces.md  A3.Profiling.md  A4.Post_Analysis.md  Adaptive_timestep.md  B1.Clang_Format.md  C1.Exercises.md  CMake.md  ClangFormat.md  Code_execution.md  Code_overview.md  Efficient_code.md  Excercises.md  GH_codespaces.md  IO_overview.md  NeighbourSearch.md  Neighbour_Search.md  OOP_concepts.md  Object Oriented Programming.md  Profiling.md  Public and private members.md  SPH.md  STL.md  STL_Changes.md  (+5 more)
docs/assets/: Object Oriented Programming.md
exec/input/: case.txt  constants.txt  domain.txt  ic-block-drop.txt  ic-droplet.txt  ic-four-particles.txt  ic-one-particle.txt  ic-three-particles.txt  ic-two-particles.txt
exec/inputs/: case.txt  domain.txt
post/: plot_energies.ipynb  plot_energies.py  simulation_animation.ipynb  simulation_animation.py  visualise_energies.py  visualise_particles.ipynb  visualise_particles.py  visualize_particles.ipynb
search/: search_index.json
src/: CMakeLists.txt  Energy-File.txt  Makefile  Positions-x-y.txt  SPH-SOLVER  SPH-main.cpp  class.cpp  class.h  fluid.cpp  fluid.h  initial_conditions.cpp  initial_conditions.h  main_prof_funcs.h  main_prog_funcs.h  particles.cpp  particles.h  sph.cpp  sph.h  sph_2D.cpp  sph_2D.h  sph_2d.cpp  sph_2d.h  sph_calc.cpp  sph_calc.h  sph_solver.cpp  sph_solver.h
